# FightingGameEngine

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  vercel.json
docs/: phase-0-checklist.md
docs/deep-dives/: 01-database-schema.md  02-deno-relay-protocol.md  03-asset-pipeline.md  04-room-lobby-ux.md  05-rollback-netcode.md
docs/superpowers/plans/: 2026-07-16-fighting-game-engine-plan.md
docs/superpowers/specs/: 2026-07-16-fighting-game-engine-design.md
engine/DolmexicaInfinite/: characterselectscreen.cpp  config.cpp  dolmexicadebug.cpp  dolmexicastoryscreen.cpp  dolmexicastoryscreen.h  external_input.cpp  external_input.h  fightscreen.cpp  fightui.cpp  main.cpp  mugenstagehandler.cpp  playerdefinition.cpp  stage.cpp  start_direct_match.cpp  titlescreen.cpp  versusscreen.cpp  victoryquotescreen.cpp
engine/DolmexicaInfinite/addons/prism/: .gitignore  Makefile.common  Makefile.commondc  Makefile.commonweb  Makefile.dc  Makefile.vita  Makefile.web  actorhandler.cpp  animation.cpp  animationtree.cpp  blitzcamerahandler.cpp  blitzclick.cpp  blitzcollision.cpp  blitzcomponent.cpp  blitzentity.cpp  blitzmugenanimation.cpp  blitzmugensound.cpp  blitzparticles.cpp  blitzphysics.cpp  blitzplatforming.cpp  blitztimelineanimation.cpp  blitztimelineanimationreader.cpp  clipboardhandler.cpp  collision.cpp  collisionanimation.cpp  collisionhandler.cpp  compression.cpp  datastructures.cpp  debug.cpp  drawing.cpp  errorscreen.cpp  file.cpp  filereader.cpp  log.cpp  (+38 more)
engine/DolmexicaInfinite/addons/prism/assets/template/cmake/: CMakeLists.txt
engine/DolmexicaInfinite/data/: fight.def  fight.sff  fightfx.air  mugen.cfg  select.def  system.def  system.sff  system.snd
engine/DolmexicaInfinite/font/: f-4x6.def  f-4x6.fnt
engine/DolmexicaInfinite/stages/: DMjmansion.def  DMjmansion.sff  stage0.def
public/game/: game.js  game.wasm  index.html
public/test/: input-bridge.html
scripts/: build-wasm.sh  generate-bitmap-font.py  generate-system-sff-v1.py  generate-system-sff.py  test-fight-input.js  test-input-bridge.js
server/db/: queries.ts
server/db/migrations/: 001-initial.sql
server/src/ws/: room-manager.ts
server/utils/: helpers.ts
src/app/: layout.tsx  page.tsx
src/app/lobby/: page.tsx
src/app/local/: page.tsx
src/components/: CharacterSelect.tsx  GameCanvas.tsx  TouchControls.tsx
src/hooks/: use-game-input.ts  use-local-two-player.ts
src/lib/: character-catalog.ts  relay-client.ts  wasm-loader.ts
src/styles/: game.css
tools/: validate-mugen.py
(+226 files in other folders)
